--- a/main.css
+++ b/main.css
@@ -115,4 +115,8 @@ Alteração indicadores carousel
     .carousel-item img{
         height: 280px;
     }
+
+    footer{
+        font-size: small;
+    }
 }
